Create file with environment variables to be shared by workflows and load at setup
Created a file `.github/workflows/workflow_config` containing environment variable definitions to be used by GitHub Actions workflows and modified setup composite action to load variables from this file during setup

--- a/.github/workflows/composite-actions/setup/action.yml
+++ b/.github/workflows/composite-actions/setup/action.yml
@@ -13,6 +13,10 @@ runs:
       shell: bash
       run: sudo apt update && sudo apt -y upgrade
 
+    - name: Load Environment Variables
+      shell: bash
+      run: cat $GITHUB_WORKSPACE/.github/workflows/workflow_config >> $GITHUB_ENV
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
