Update VS Code settings to prevent linting documentation configuration
Modified `.vscode/settings.json` to exclude `docs/source/conf.py` since this file requires some specific configuration settings that may not align with typical Python standards (but are best practices for using Sphinx)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "utilities/**",
         "scratch/**/*.py",
         "scratch.py",
+        "docs/source/conf.py",
     ],
 
     // Python linting: Pylint
