Separate loading workflow configuration into its own composite action
Separated the composite action step that loads workflow environment variables from `.github/workflows/workflow_config` into a new composite action so that this step can be reused by other actions

--- a/.github/workflows/composite-actions/setup/action.yml
+++ b/.github/workflows/composite-actions/setup/action.yml
@@ -1,5 +1,5 @@
 name: Setup Composite Action
-description:  Update system, set up Python, and install dependencies
+description: Update system, set up Python, and install dependencies
 
 inputs:
   python-version:
@@ -14,8 +14,7 @@ runs:
       run: sudo apt update && sudo apt -y upgrade
 
     - name: Load Environment Variables
-      shell: bash
-      run: cat $GITHUB_WORKSPACE/.github/workflows/workflow_config >> $GITHUB_ENV
+      uses: ./.github/workflows/composite-actions/load-workflow-config
 
     - name: Set up Python
       uses: actions/setup-python@v4
