--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -11,13 +11,29 @@ on:
   workflow_dispatch:
 
 jobs:
+  setup:
+    name: Set up Job Configuration
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Check Out Repository Files
+        uses: actions/checkout@v3
+
+      - name: Run Setup Action
+        uses: ./.github/workflows/composite-actions/load-workflow-config
+
+      - name: Set up Python Version Matrix
+        id: set-matrix
+        run: echo "::set-output name=matrix::${{ env.PYTHON_VERSIONS }}"
+
   bandit:
     name: Bandit Scan (Python ${{ matrix.python-version }})
+    needs: setup
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        python-version: ['3.8', '3.9', '3.10']
+      matrix: ${{ fromJSON(needs.setup.outputs.matrix) }}
     steps:
       - name: Check Out Repository Files
         uses: actions/checkout@v3
