--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -12,20 +12,7 @@ on:
 
 jobs:
   setup:
-    name: Set up Job Configuration
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - name: Check Out Repository Files
-        uses: actions/checkout@v3
-
-      - name: Run Setup Action
-        uses: ./.github/workflows/composite-actions/load-workflow-config
-
-      - name: Set up Python Version Matrix
-        id: set-matrix
-        run: echo "::set-output name=matrix::${{ env.PYTHON_VERSIONS }}"
+    uses: ./.github/workflows/reusable-get-python-version-matrix.yml
 
   bandit:
     name: Bandit Scan (Python ${{ matrix.python-version }})
