Split `requirements.txt` into multiple files
Divided packages in `requirements.txt` into separate requirements files for running PyXX, development, and building documentation

--- a/.github/workflows/composite-actions/setup/action.yml
+++ b/.github/workflows/composite-actions/setup/action.yml
@@ -31,4 +31,4 @@ runs:
       run: |
         python3 -m pip install --upgrade pip
         python3 -m pip install wheel
-        python3 -m pip install -r ${GITHUB_WORKSPACE}/requirements.txt
+        python3 -m pip install -r ${GITHUB_WORKSPACE}/.vscode/requirements.txt
