--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-bandit
-flake8
-matplotlib
-mypy
-numpy
-pylint
-Sphinx
-sphinx_design
-sphinx-book-theme
-sphinx-copybutton
-sphinx-remove-toctrees
-sphinxcontrib-spelling
+##############################
+#   PyXX Requirements File   #
+##############################
+
+# This file installs the necessary dependencies for the PyXX package.
+
+# To install these files, simply open the PyXX repository in a terminal
+# and run:
+#    pip install -r requirements.txt
+
+# Note that if you intend to work on PyXX code development, it is advised
+# that you use the `.vscode/requirements.txt` file to install dependencies.
+
+##############################################################################
