--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -53,7 +53,7 @@ jobs:
 
   test-status-check:
     name: Python Tests
-    needs: [test, test-success]
+    needs: test-success
     if: ${{ always() }}
     uses: ./.github/workflows/_matrix_status_check.yml
     with:
@@ -90,7 +90,7 @@ jobs:
 
   pylint-status-check:
     name: Pylint Linting
-    needs: [pylint, pylint-success]
+    needs: pylint-success
     if: ${{ always() }}
     uses: ./.github/workflows/_matrix_status_check.yml
     with:
@@ -124,7 +124,7 @@ jobs:
 
   flake8-status-check:
     name: Flake8 Linting
-    needs: [flake8, flake8-success]
+    needs: flake8-success
     if: ${{ always() }}
     uses: ./.github/workflows/_matrix_status_check.yml
     with:
@@ -158,7 +158,7 @@ jobs:
 
   mypy-status-check:
     name: Mypy Linting
-    needs: [mypy, mypy-success]
+    needs: mypy-success
     if: ${{ always() }}
     uses: ./.github/workflows/_matrix_status_check.yml
     with:
@@ -194,7 +194,7 @@ jobs:
 
   bandit-status-check:
     name: Bandit Scan
-    needs: [bandit, bandit-success]
+    needs: bandit-success
     if: ${{ always() }}
     uses: ./.github/workflows/_matrix_status_check.yml
     with:
