--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - main
-    tags-ignore:
-      - '**'
   pull_request:
     types: [opened, reopened, synchronize]
+  release:
+    types: [published]
   workflow_dispatch:
 
 env:
