Configure Python packaging options
Created `pyproject.toml` and `setup.cfg` files to configure Python packaging settings. Also added "build" and "twine" packages to list of required packages for code development and modified `.vscode/settings.json` to set appropriate file associations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     // File language associations
     "files.associations": {
         "pylintrc": "ini",
+        "pyproject.toml": "ini",
         "workflow_config": "ini",
     },
 
