Make minor revisions to CI/CD configuration
Changed workflow job name and modified `pyproject.toml` to address warning message

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -142,7 +142,7 @@ jobs:
   # Build a distributable package, upload as a workflow artifact, and possibly
   # publish to PyPI
   deploy:
-    name: Build and Deploy
+    name: Build and Deploy Package
     needs:
       - test-status-check
       - linting-status-check
