--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
 dynamic = [
-    "version",
     "dependencies",
+    "version",
+    "urls",
 ]
 
 [tool.setuptools.dynamic]
