Set Python "release" version in workflow configuration file
Modified GitHub Actions workflows so that the version of Python used for final build and publish tasks is specified in `.github/workflows/workflow_config`. This reduces the number of places that values are hard-coded, reducing the risk of bugs

--- a/.github/workflows/composite-actions/setup/action.yml
+++ b/.github/workflows/composite-actions/setup/action.yml
@@ -22,8 +22,15 @@ runs:
 
     - name: Set up Python
       uses: actions/setup-python@v4
+      if: ${{ inputs.python-version != 'release' }}
       with:
         python-version: ${{ inputs.python-version }}
+
+    - name: Set up Python Release Version
+      uses: actions/setup-python@v4
+      if: ${{ inputs.python-version == 'release' }}
+      with:
+        python-version: ${{ env.PYTHON_RELEASE_VERSION }}
 
     - name: Install System Packages
       shell: bash
