--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,8 +10,6 @@ on:
     types: [published]
   workflow_dispatch:
 
-env:
-  PYTHON_RELEASE_VERSION: '3.8'
 
 jobs:
 
@@ -122,7 +120,7 @@ jobs:
       - name: Run Setup Action
         uses: ./.github/workflows/composite-actions/setup
         with:
-          python-version: ${{ env.PYTHON_RELEASE_VERSION }}
+          python-version: release
           pip-requirements-file: docs/requirements.txt
 
       - name: Build Documentation
@@ -158,7 +156,7 @@ jobs:
       - name: Run Setup Action
         uses: ./.github/workflows/composite-actions/setup
         with:
-          python-version: ${{ env.PYTHON_RELEASE_VERSION }}
+          python-version: release
 
       - name: Build Package
         run: python3 -m build --sdist --wheel --outdir dist/ .
