--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -150,8 +150,6 @@ jobs:
     steps:
       - name: Check Out Repository Files
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
       - name: Run Setup Action
         uses: ./.github/workflows/composite-actions/setup
@@ -172,7 +170,7 @@ jobs:
           retention-days: 7
           if-no-files-found: error
 
-      - name: Check Release Number
+      - name: Check Release Formatting and Tag
         if: ${{ github.event_name == 'release' }}
         uses: ./.github/workflows/composite-actions/check-release
         with:
