Disable running APT updates by default in GitHub Actions workflows
Added option to job setup composite action to enable/disable running APT updates at the beginning of jobs. This should reduce workflow duration and minimize log output in cases when it is not necessary to run updates

--- a/.github/workflows/composite-actions/setup/action.yml
+++ b/.github/workflows/composite-actions/setup/action.yml
@@ -9,11 +9,16 @@ inputs:
     description: Requirements file from which to install Python dependencies
     required: false
     default: .vscode/requirements.txt
+  update-system:
+    description: Whether to run APT system updates
+    required: false
+    default: 'false'
 
 runs:
   using: composite
   steps:
     - name: Update System
+      if: ${{ inputs.update-system == 'true' }}
       shell: bash
       run: sudo apt update && sudo apt -y upgrade
 
