--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,3 @@
 [build-system]
-requires = [
-    "setuptools",
-    "wheel",
-]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
-
-[project]
-name = "pyxx"
-description = "Collection of useful Python utilities and tools"
-readme = "README.md"
-license = {text = "MIT"}
-requires-python = ">=3.8"
-dynamic = [
-    "dependencies",
-    "version",
-    "urls",
-]
-
-[tool.setuptools]
-include-package-data = true
-
-[tool.setuptools.dynamic]
-version = {attr = "pyxx.__version__"}
-dependencies = {file = "requirements.txt"}
-
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["pyxx*"]
