Add recommended fields to `setup.cfg`

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,8 @@ name = pyxx
 version = attr: pyxx.__version__
 description = Collection of useful Python utilities and tools
 long_description = file: README.md
+long_description_content_type = text/markdown
+author = Nathan Hess
 license = MIT
 url = https://github.com/nathan-hess/python-utilities
 project_urls =
