--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = [
+    "setuptools>=65.0.0",
+    "wheel"
+]
 build-backend = "setuptools.build_meta"
