--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     // File language associations
     "files.associations": {
+        ".coveragerc": "ini",
         "pylintrc": "ini",
         "pyproject.toml": "ini",
         "workflow_config": "ini",
