--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -135,7 +135,7 @@ jobs:
           cd $GITHUB_WORKSPACE/docs
           SPHINXOPTS="-W" make spelling
 
-      - name: Test Documentation Code Samples
+      - name: Test Documentation Code Snippets
         if: ${{ always() }}
         run: |
           cd $GITHUB_WORKSPACE/docs
