--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = Collection of useful Python utilities and tools
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Nathan Hess
-license = MIT
+license = MPL-2.0
 url = https://github.com/nathan-hess/python-utilities
 project_urls =
     Documentation = http://pyxx.readthedocs.io/
