--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,7 @@ dmypy.json
 
 # Auto-generated documentation files
 /docs/source/api_reference/api/
+/docs/source/getting_started/reference/unitconverter_units.rst
 
 # Development and testing files
 /scratch/
