Fix VS Code Python testing settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,6 @@
     "python.testing.unittestEnabled": true,
     "python.testing.unittestArgs": [
         "-v",
-        "-s", "./tests",
-        "-p", "test_*.py",
+        "tests",
     ],
 }
