--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,10 @@ python_requires = >=3.8
 install_requires = file: requirements.txt
 packages = find:
 
+[options.entry_points]
+console_scripts =
+    unit-converter = pyxx:units.execute_from_command_line
+
 [options.packages.find]
 include =
     pyxx*
