Modify package configuration so that data files are installed
Previously, the "include_package_data" option was not specified in `setup.cfg`, and as a result, the `py.typed` file was not installed, leading to Mypy errors in packages for which PyXX is a dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ project_urls =
 
 [options]
 python_requires = >=3.8
+include_package_data = True
 install_requires = file: requirements.txt
 packages = find:
 
