--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ author = Nathan Hess
 license = MPL-2.0
 url = https://github.com/nathan-hess/python-utilities
 project_urls =
-    Documentation = http://pyxx.readthedocs.io/
+    Documentation = https://pyxx.readthedocs.io
 
 [options]
 python_requires = >=3.8
