Modify GitHub Actions setup to log installed Python packages

--- a/.github/workflows/composite-actions/setup/action.yml
+++ b/.github/workflows/composite-actions/setup/action.yml
@@ -48,3 +48,7 @@ runs:
         python3 -m pip install --upgrade pip
         python3 -m pip install wheel
         python3 -m pip install -r "${GITHUB_WORKSPACE}/${{ inputs.pip-requirements-file }}"
+
+    - name: List Installed Python Packages
+      shell: bash
+      run: python3 -m pip list
