Change project description
Made project description consistent across all comments and documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = pyxx
 version = attr: pyxx.__version__
-description = Collection of useful Python utilities and tools
+description = Collection of utilities for Python code
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Nathan Hess
