--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -27,4 +27,4 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage.json
           fail_ci_if_error: true
-          verbose: true
+          verbose: false
