Update VS Code settings for compatibility with the latest version of Python extensions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,8 @@
         "workflow_config": "ini",
     },
 
-    // Python linting: general
-    "python.linting.enabled": true,
-    "python.linting.ignorePatterns": [
+    // Python linting: Pylint
+    "pylint.ignorePatterns": [
         "**/site-packages/**/*.py",
         ".vscode/*.py",
         "docs/source/conf.py",
@@ -19,28 +18,48 @@
         "tests/**",
         "utilities/**",
     ],
-
-    // Python linting: Pylint
-    "python.linting.pylintEnabled": true,
-    "python.linting.pylintCategorySeverity.convention": "Warning",
-    "python.linting.pylintCategorySeverity.error": "Warning",
-    "python.linting.pylintCategorySeverity.fatal": "Warning",
-    "python.linting.pylintCategorySeverity.refactor": "Warning",
-    "python.linting.pylintCategorySeverity.warning": "Warning",
+    "pylint.severity": {
+        "convention": "Warning",
+        "error": "Warning",
+        "fatal": "Warning",
+        "refactor": "Warning",
+        "warning": "Warning",
+        "info": "Warning",
+    },
 
     // Python linting: Flake8
-    "python.linting.flake8Enabled": true,
-    "python.linting.flake8CategorySeverity.E": "Warning",
-    "python.linting.flake8CategorySeverity.F": "Warning",
-    "python.linting.flake8CategorySeverity.W": "Warning",
+    "flake8.ignorePatterns": [
+        "**/site-packages/**/*.py",
+        ".vscode/*.py",
+        "docs/source/conf.py",
+        "run_tests.py",
+        "scratch/**",
+        "scratch.py",
+        "tests/**",
+        "utilities/**",
+    ],
+    "flake8.severity": {
+        "E": "Warning",
+        "F": "Warning",
+        "I": "Warning",
+        "W": "Warning",
+    },
 
     // Python linting: Mypy
-    "python.linting.mypyEnabled": true,
-    "python.linting.mypyCategorySeverity.error": "Warning",
-    "python.linting.mypyCategorySeverity.note": "Warning",
-
-    // Python linting: Bandit
-    "python.linting.banditEnabled": true,
+    "mypy-type-checker.ignorePatterns": [
+        "**/site-packages/**/*.py",
+        ".vscode/*.py",
+        "docs/source/conf.py",
+        "run_tests.py",
+        "scratch/**",
+        "scratch.py",
+        "tests/**",
+        "utilities/**",
+    ],
+    "mypy-type-checker.severity": {
+        "error": "Warning",
+        "note": "Warning",
+    },
 
     // Python tests
     "python.testing.pytestEnabled": false,
